# covid19_timelines

./: .gitignore  .py_sum.txt.swp  README.md  covid_world_stats.py  find_top5_per_Region.py  lib_covid.py  lib_world_pop.py  old_covid_main.py  pandas_main.py  pandas_plot0.py  parse_covid_data.py  parse_population.py  pd_plotly_subplots.py  plot_covid_stats.py  plottop5.py  py_sum.txt  pyproject.toml  requirements.txt  sample1.py  sample_country_list.txt  simpleplot.py  test_cg_plotly.py  world_pop_lib.py
aux/: dpi.py  sample1.py  simpleplot.py  subplots.py
covid19_timelines/: __init__.py  __main__.py  covid_JHU.py  covid_main.py  covid_world_stats.py  lib_covid.py  pd_plotly_subplots.py  pull_covid19_JHU_data.sh  pull_data.sh  test_region_plot.py  world_pop.py
covid19_timelines.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
covid19_timelines/covid_JHU/: covid_JHU.py
covid19_timelines/data/: datestamp
covid19_timelines/input/: country_list.txt  sample_list.txt
covid19_timelines/pd_parser/: covid_JHU.py  world_pop.py
covid19_timelines/pd_parser/data/: pull_covid19_JHU_data.sh  world_pop_wikipedia.csv
covid19_timelines/pd_parser/debug/: clean_covid_confirmed.csv  clean_covid_deaths.csv  clean_world_pop_all.csv
covid19_timelines/world_pop/: world_pop.py
data/world_pop/: world_pop_wikipedia.csv
input/: country_list.txt  fetchdata.bash  population_per_country_wkipedia.csv  world_pop_wikipedia.csv
tests/: test_covid19_timelines.py
