[tool.poetry]
name = "covid19_timelines"
version = "0.1.0"
description = ""
authors = ["jose-cubero <cuberojose@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
numpy = "^1.19.1"
matplotlib = "^3.3.0"
dash = "^1.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
