[tool.poetry]
name = "covid19_timelines"
version = "0.1.0"
description = "Dashboard for the visualization of Covid19 statistics"
authors = ["jose-cubero <cuberojose@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
numpy = "^1.19.1"
matplotlib = "^3.3.0"
dash = "^1.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
